--- a/config/_default/languages.en.toml
+++ b/config/_default/languages.en.toml
@@ -15,7 +15,7 @@ dateFormat = "2 January 2006"
 [author]
   name = "Yosi Kwaw"
   # image = "img/author.jpg"
-  headline = "Sometimes I write things"
+  headline = "Better is Good"
   bio = "This is just a place for me to write a little."
   # links = [
   #   { email = "mailto:hello@your_domain.com" },
