--- a/config/_default/languages.en.toml
+++ b/config/_default/languages.en.toml
@@ -8,12 +8,12 @@ rtl = false
 title = "Kwaw.xyz"
 # logo = "img/logo.jpg"
 description = "A personal blog"
-copyright = "&copy; 2022 Yosi Kwaw"
+copyright = "&copy; 2022 Kwaw"
 
 dateFormat = "2 January 2006"
 
 [author]
-  name = "Yosi Kwaw"
+  name = ""
   # image = "img/author.jpg"
   headline = "Better is Good"
   bio = "This is just a place for me to write a little."
