--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -6,16 +6,16 @@
 # https://jpanther.github.io/congo/docs/configuration/#theme-parameters
 
 colorScheme = "ocean"
-defaultAppearance = "light" # valid options: light or dark
-autoSwitchAppearance = true
-showAppearanceSwitcher = true
+defaultAppearance = "dark" # valid options: light or dark
+autoSwitchAppearance = false
+footer.showAppearanceSwitcher = true
 
 enableSearch = true
 enableCodeCopy = true
 
 # mainSections = ["section1", "section2"]
 # robots = ""
-showScrollToTop = true
+footer.showScrollToTop = true
 
 [homepage]
   layout = "profile" # valid options: page, profile, custom
