Poem section + Sonder + After the end

--- a/config/_default/menus.en.toml
+++ b/config/_default/menus.en.toml
@@ -25,6 +25,9 @@
   pageRef = "tags"
   weight = 30
 
+[[footer]]
+  name = "Poems"
+  pageRef = "poems"
 
 # -- Footer Menu --
 # The footer menu is displayed at the bottom of the page, just before
