Adding books section

--- a/config/_default/menus.en.toml
+++ b/config/_default/menus.en.toml
@@ -26,8 +26,15 @@
   weight = 30
 
 [[footer]]
+  name = "Books"
+  pageRef = "books"
+
+
+[[footer]]
   name = "Poems"
   pageRef = "poems"
+
+
 
 # -- Footer Menu --
 # The footer menu is displayed at the bottom of the page, just before
