--- a/config/_default/languages.en.toml
+++ b/config/_default/languages.en.toml
@@ -12,7 +12,7 @@ copyright = "&copy; 2024 Kwaw.xyz"
 
 dateFormat = "2 January 2006"
 
-[author]
+[params.author]
   name = ""
   # image = "img/author.jpg"
   headline = "Better is Good"
